Fix z-index in navigation for home page.

--- a/src/styles/_navigation.sass
+++ b/src/styles/_navigation.sass
@@ -13,6 +13,7 @@ $nav-border-radius: 20px
   left: 50%
   transform: translateX(-50%)
   font-size: 0.9rem
+  z-items: 4
 
   .logo-nav
     padding: 0
